welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: type mismatch;
 found   : Unit
 required: Boolean
	while (finish()) {
                     ^